--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
             </div>
 
 
-            <div class="git ">
+            <div class="main-content-container-instagram-photo">
                 <img src="../images/insta1.jpg">
                 <img src="../images/insta10.jpg">
                 <img src="../images/insta2.jpg">
