--- a/html/index.html
+++ b/html/index.html
@@ -56,18 +56,18 @@
 
 
             <div class="main-content-container-instagram-photo">
-                <img src="../images/insta1.jpg">
-                <img src="../images/insta10.jpg">
-                <img src="../images/insta2.jpg">
-                <img src="../images/insta16.jpg">
-                <img src="../images/insta4.jpg">
-                <img src="../images/insta5.jpg">
-                <img src="../images/insta15.jpg">
-                <img src="../images/insta13.jpg">
-                <img src="../images/insta8.jpg">
-                <img src="../images/burger11.jpg">
-                <img src="../images/burger9.jpg">
-                <img src="../images/insta12.jpg">
+                <a href="http://www.instagram.com"><img src="../images/insta1.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta10.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta2.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta16.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta4.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta5.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta15.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta13.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta8.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/burger11.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/burger9.jpg"></a>
+                <a href="http://www.instagram.com"><img src="../images/insta12.jpg"></a>
             </div>
         </div>
 
