premieres erreures corrigees

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
             <h1 class="header-hero-image-title">Le Burger à la Française</h1>
         </div>
     </header>
-    <main>
+    <div class="main-content-index">
         <div class="main-content-container-first">
           <h2 class="main-content-title">Notre Concept</h2>
             <img src="../images/produits.jpg" alt="nos produits">
@@ -36,7 +36,7 @@
           <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
         <p>Notre idée ? Vous proposer un repas rapide gourmand et convivial grâce à un burger français fait maison, avec des produits locaux. Un produit au goût unique qui associe le meilleur du fast food américain et le meilleur de la cuisine française.</p>
         </div>
-    </main>
+    </div>
 
     <main class="main-content-index">
         <div class="main-content-container-right">
