--- a/html/nos-burgers.html
+++ b/html/nos-burgers.html
@@ -20,7 +20,66 @@
             </ul>
         </nav>
     </header>
+    
     <main class="main-content-products">
+
+    <div class="main-content-index">
+        <div class="main-content-container-first">
+          <h2 class="main-content-title">LA CARTE</h2>
+            <img src="../images/produits.jpg" alt="nos produits">
+        </div>
+        <div class="main-content-container-left">
+          <h3>Le French touch.</h3>
+          <p>- Roquette</p>
+        <p>Oignons frites.</p>
+        </div>
+    </div>
+
+    <main class="main-content-index">
+        <div class="main-content-container-right">
+          <h3>Du fait-maison.</h3>
+          <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
+        </div>
+        <div class="main-content-container-first">
+          <h2 class="main-content-title-right">On garde ?</h2>
+            <img src="../images/savoureux.jpg" alt="nos produits">
+        </div>
+     </main>
+
+    <div class="main-content-index">
+        <div class="main-content-container-first">
+          <h2 class="main-content-title">On garde ?</h2>
+            <img src="../images/produits.jpg" alt="nos produits">
+        </div>
+        <div class="main-content-container-left">
+          <h3>Le French touch.</h3>
+          <p>- Roquette</p>
+        <p>Oignons frites.</p>
+        </div>
+    </div>
+
+    <main class="main-content-index">
+        <div class="main-content-container-right">
+          <h3>Du fait-maison.</h3>
+          <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
+        </div>
+        <div class="main-content-container-first">
+          <h2 class="main-content-title-right">On garde ?</h2>
+            <img src="../images/savoureux.jpg" alt="nos produits">
+        </div>
+     </main>
+     <div class="main-content-index">
+        <div class="main-content-container-first">
+          <h2 class="main-content-title">On garde ?</h2>
+            <img src="../images/produits.jpg" alt="nos produits">
+        </div>
+        <div class="main-content-container-left">
+          <h3>Le French touch.</h3>
+          <p>- Roquette</p>
+        <p>Oignons frites.</p>
+        </div>
+    </div>
+
     </main>
     <footer class="footer">
         <p>©Copyright Team Nine - Challenge Simplon.co</p>
