--- a/html/index.html
+++ b/html/index.html
@@ -23,39 +23,32 @@
             </ul>
         </nav>
         <div class="header-hero-image">
+        <img class="header-hero-image-logo" src="../images/logo-hero.png" alt="">
             <h1 class="header-hero-image-title">Le Burger à la Française</h1>
         </div>
     </header>
-    <div class="main-content-index">
-        <div class="main-content-container-first">
-          <h2 class="main-content-title">Notre Concept</h2>
-            <img src="../images/produits.jpg" alt="nos produits">
-        </div>
-        <div class="main-content-container-left">
-          <h3>Des produits locaux de qualité.</h3>
-          <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
-        <p>Notre idée ? Vous proposer un repas rapide gourmand et convivial grâce à un burger français fait maison, avec des produits locaux. Un produit au goût unique qui associe le meilleur du fast food américain et le meilleur de la cuisine française.</p>
-        </div>
-    </div>
 
-    <main class="main-content-index">
-        <div class="main-content-container-right">
-          <h3>Du fait-maison.</h3>
-          <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
-        </div>
-        <div class="main-content-container-first">
-          <h2 class="main-content-title-right">Nos garanties</h2>
-            <img src="../images/savoureux.jpg" alt="nos produits">
-        </div>
-     </main>
-        <div class="main-content-container-instagram">
-
-            <div class="main-content-container-instagram-title">
-                <h2>Suivez nous sur les réseaux sociaux</h2>
+    <main class="main-content-container">
+        <h2 class="main-content-title">Notre Concept</h2>
+        <div class="main-content-section">
+            <img class="main-content-image" src="../images/produits.jpg" alt="nos produits">
+            <div class="main-content-text main-content-text-right">
+                <h3>Des produits locaux de qualité.</h3>
+                <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.<br>
+                Notre idée ? Vous proposer un repas rapide gourmand et convivial grâce à un burger français fait maison, avec des produits locaux. Un produit au goût unique qui associe le meilleur du fast food américain et le meilleur de la cuisine française.</p>
             </div>
+        </div>
+        <div class="main-content-section main-content-section-reverse">
+            <div class="main-content-text main-content-text-left">
+                <h3>Du fait-maison.</h3>
+                <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
+            </div>
+                <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
+        </div>
 
-
-            <div class="main-content-container-instagram-photo">
+        <div class="main-content-instagram">
+                <h2 class="main-content-title"> Suivez nous sur les réseaux sociaux</h2>
+            <div class="main-content-instagram-photo">
                 <a href="http://www.instagram.com"><img src="../images/insta1.jpg"></a>
                 <a href="http://www.instagram.com"><img src="../images/insta10.jpg"></a>
                 <a href="http://www.instagram.com"><img src="../images/insta2.jpg"></a>
@@ -70,6 +63,7 @@
                 <a href="http://www.instagram.com"><img src="../images/insta12.jpg"></a>
             </div>
         </div>
+     </main>
 
 
     <footer class="footer">
