commit avant pull

--- a/html/index.html
+++ b/html/index.html
@@ -33,14 +33,13 @@
         <div class="main-content-section">
             <img class="main-content-image" src="../images/produits.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
-                <h3>Des produits locaux de qualité.</h3>
-                <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.<br>
-                Notre idée ? Vous proposer un repas rapide gourmand et convivial grâce à un burger français fait maison, avec des produits locaux. Un produit au goût unique qui associe le meilleur du fast food américain et le meilleur de la cuisine française.</p>
+                <h3>Des produits locaux de qualité</h3>
+                <p>Notre idée ? Vous proposer un repas rapide gourmand et convivial grâce à un burger français fait maison, avec des produits locaux. Un produit au goût unique qui associe le meilleur du fast food américain et le meilleur de la cuisine française.</p>
             </div>
         </div>
         <div class="main-content-section main-content-section-reverse">
             <div class="main-content-text main-content-text-left">
-                <h3>Du fait-maison.</h3>
+                <h3>Du fait-maison</h3>
                 <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
             </div>
                 <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
