debut edition page 2 de nine par Yacine

--- a/html/nos-burgers.html
+++ b/html/nos-burgers.html
@@ -20,58 +20,46 @@
             </ul>
         </nav>
     </header>
-    
+
     <main class="main-content-products">
-
-    <div class="main-content-index">
-        <div class="main-content-container-first">
-          <h2 class="main-content-title">LA CARTE</h2>
-            <img src="../images/produits.jpg" alt="nos produits">
-        </div>
+        <h2 class="main-content-title">LA CARTE</h2>
+        <div class="main-content-section">
+                <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
         <div class="main-content-container-left">
           <h3>Le French touch.</h3>
           <p>- Roquette</p>
-        <p>Oignons frites.</p>
+          <p>Oignons frites.</p>
         </div>
     </div>
 
-    <main class="main-content-index">
+        <div class="main-content-section">
         <div class="main-content-container-right">
           <h3>Du fait-maison.</h3>
           <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
         </div>
-        <div class="main-content-container-first">
-          <h2 class="main-content-title-right">On garde ?</h2>
-            <img src="../images/savoureux.jpg" alt="nos produits">
-        </div>
-     </main>
+          <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
+     </div>
 
-    <div class="main-content-index">
-        <div class="main-content-container-first">
-          <h2 class="main-content-title">On garde ?</h2>
-            <img src="../images/produits.jpg" alt="nos produits">
+        <div class="main-content-section">
+                 <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
+            <div class="main-content-container-left">
+                 <h3>Le French touch.</h3>
+                 <p>- Roquette</p>
+                 <p>Oignons frites.</p>
+            </div>
         </div>
-        <div class="main-content-container-left">
-          <h3>Le French touch.</h3>
-          <p>- Roquette</p>
-        <p>Oignons frites.</p>
-        </div>
-    </div>
 
-    <main class="main-content-index">
+        <div class="main-content-section">
         <div class="main-content-container-right">
           <h3>Du fait-maison.</h3>
           <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
         </div>
-        <div class="main-content-container-first">
-          <h2 class="main-content-title-right">On garde ?</h2>
-            <img src="../images/savoureux.jpg" alt="nos produits">
-        </div>
+          <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
      </main>
-     <div class="main-content-index">
+        <div class="mmain-content-section">
         <div class="main-content-container-first">
           <h2 class="main-content-title">On garde ?</h2>
-            <img src="../images/produits.jpg" alt="nos produits">
+            <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
         </div>
         <div class="main-content-container-left">
           <h3>Le French touch.</h3>
@@ -79,9 +67,10 @@
         <p>Oignons frites.</p>
         </div>
     </div>
-
     </main>
+
     <footer class="footer">
+        <a href="#header"><i class="fa fa-chevron-up fa-2x"></i></a>
         <p>©Copyright Team Nine - Challenge Simplon.co</p>
     </footer>
 </body>
