code reuni, manque le responsive

--- a/html/index.html
+++ b/html/index.html
@@ -22,8 +22,8 @@
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-instagram"></i></li>
             </ul>
         </nav>
-        <div class="header-hero-image">
-        <img class="header-hero-image-logo" src="../images/logo-hero.png" alt="">
+        <div class="header-hero-image-home">
+            <img class="header-hero-image-logo" src="../images/logo-hero.png" alt="">
             <h1 class="header-hero-image-title">Le Burger à la Française</h1>
         </div>
     </header>
@@ -61,6 +61,20 @@
                 <a href="http://www.instagram.com"><img src="../images/burger9.jpg"></a>
                 <a href="http://www.instagram.com"><img src="../images/insta12.jpg"></a>
             </div>
+            <!-- INSTAGRAM RESPONSIVE  -->
+            <div class="slider">
+                <div class="main-content-slider-title">
+                    <h2>Envoyez-nous vos photos avec #panamburger</h2>
+                </div>
+                <figure>
+                    <img src="../images/insta1.jpg" alt="Personne qui mange des burgers">
+                    <img src="../images/insta10.jpg">
+                    <img src="../images/insta16.jpg">
+                    <img src="../images/sandroburger.jpg">
+                    <img src="../images/insta13.jpg">
+                </figure>
+            </div>
+            <!-- FIN INSTAGRAM RESPONSIVE -->
         </div>
      </main>
 
