--- a/html/nos-burgers.html
+++ b/html/nos-burgers.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-        <link rel="stylesheet" href="../css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <header>
         <nav class="header-nav">
             <ul class="header-nav-buttons-list">
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html">Notre Concept</a></li>
@@ -19,54 +18,49 @@
                 <li class="header-nav-buttons header-nav-buttons-social"><i class="fa fa-instagram"></i></li>
             </ul>
         </nav>
-    </header>
-
-    <main class="main-content-products">
-        <h2 class="main-content-title">LA CARTE</h2>
-        <div class="main-content-section">
-                <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
-        <div class="main-content-container-left">
-          <h3>Le French touch.</h3>
-          <p>- Roquette</p>
-          <p>Oignons frites.</p>
+        <div class="header-hero-image-page2">
+            <h1 class="header-hero-image-title">Nos Burgers</h1>
         </div>
-    </div>
 
+    <main class="main-content-container">
         <div class="main-content-section">
-        <div class="main-content-container-right">
-          <h3>Du fait-maison.</h3>
-          <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
-        </div>
-          <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
-     </div>
-
-        <div class="main-content-section">
-                 <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
-            <div class="main-content-container-left">
-                 <h3>Le French touch.</h3>
-                 <p>- Roquette</p>
-                 <p>Oignons frites.</p>
+            <img  class="main-content-image" src="../images/burgers1.jpg" alt="nos produits">
+            <div class="main-content-text main-content-text-right">
+              <h3>Le French touch</h3>
+                <p>- Foie Gras <br>- Roquette <br>- Oignons frites</p>
             </div>
         </div>
 
+        <div class="main-content-section main-content-section-reverse">
+            <div class="main-content-text main-content-text-left">
+                <h3>Le Terroir</h3>
+                <p>- Bleu <br>- Bavette <br>- Echalottes <br>- Mesclun </p>
+            </div>
+            <img class="main-content-image" src="../images/burgers2.jpg" alt="nos produits">
+        </div>
+
         <div class="main-content-section">
-        <div class="main-content-container-right">
-          <h3>Du fait-maison.</h3>
-          <p>Panamburger est une histoire d’hommes et de passion. Une aventure portée par quatre entrepreneurs parisiens amoureux de la bonne cuisine.</p>
+                 <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
+            <div class="main-content-text main-content-text-right">
+                <h3>Le Full Eiffel Tower</h3>
+                <p>-  Cheddar <br>- Oignons <br>- Double Steak <br>- Double Bacon</p>
+            </div>
         </div>
-          <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
-     </main>
-        <div class="mmain-content-section">
-        <div class="main-content-container-first">
-          <h2 class="main-content-title">On garde ?</h2>
+
+        <div class="main-content-section main-content-section-reverse">
+            <div class="main-content-text main-content-text-left">
+                <h3>Le Green Triomphe</h3>
+                <p>- Avocat <br>- Graines Germées <br>- Steak d'Aubergine</p>
+            </div>
+            <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
+        </div>
+        <div class="main-content-section">
             <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
+            <div class="main-content-text main-content-text-right">
+                <h3>Le Paname</h3>
+                <p>-  Tomates Fraiches <br>- Comté <br>- Charolais <br>- Batavia</p>
+            </div>
         </div>
-        <div class="main-content-container-left">
-          <h3>Le French touch.</h3>
-          <p>- Roquette</p>
-        <p>Oignons frites.</p>
-        </div>
-    </div>
     </main>
 
     <footer class="footer">
