--- a/html/nous-trouver.html
+++ b/html/nous-trouver.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -23,9 +23,22 @@
         </nav>
     </header>
     <main class="main-content-contact">
+        <div class="main-content-contact-elements">
+            <img class="main-content-contact-image carte" src="../images/map.png" alt="map paris">
+            <div class="adresse">
+                <h2>Nous trouver</h2>
+                <h3>Panamburger</h3>
+                <p>1 rue de Paris 75001 Paris</p>
+                <p>Tél : 01 40 26 82 80</p>
+                <p>Ouvert aujourd'hui de 11h30 à 23h30</p>
+            </div>
+        </div>
     </main>
+
     <footer class="footer">
+        <a href="#header"><i class="fa fa-chevron-up fa-2x"></i></a>
         <p>©Copyright Team Nine - Challenge Simplon.co</p>
     </footer>
+
 </body>
 </html>
