code reuni, manque le responsive 2

--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="main-content-instagram">
-                <h2 class="main-content-title"> Suivez nous sur les réseaux sociaux</h2>
+            <h2 class="main-content-title main-content-title-instagram"> Suivez nous sur les réseaux sociaux</h2>
             <div class="main-content-instagram-photo">
                 <a href="http://www.instagram.com"><img src="../images/insta1.jpg"></a>
                 <a href="http://www.instagram.com"><img src="../images/insta10.jpg"></a>
@@ -63,7 +63,7 @@
             </div>
             <!-- INSTAGRAM RESPONSIVE  -->
             <div class="slider">
-                <div class="main-content-slider-title">
+                <div class="main-content-slider-instagram-title">
                     <h2>Envoyez-nous vos photos avec #panamburger</h2>
                 </div>
                 <figure>
