--- a/html/nos-burgers.html
+++ b/html/nos-burgers.html
@@ -7,6 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <header>
         <nav class="header-nav">
             <ul class="header-nav-buttons-list">
                 <li class="header-nav-buttons"><a class="header-nav-buttons-links" href="index.html">Notre Concept</a></li>
@@ -21,10 +22,10 @@
         <div class="header-hero-image-page2">
             <h1 class="header-hero-image-title">Nos Burgers</h1>
         </div>
-
+    </header>
     <main class="main-content-container">
         <div class="main-content-section">
-            <img  class="main-content-image" src="../images/burgers1.jpg" alt="nos produits">
+            <img  class="main-content-image" src="../images/hamburger4.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
               <h3>Le French touch</h3>
                 <p>- Foie Gras <br>- Roquette <br>- Oignons frites</p>
@@ -36,11 +37,11 @@
                 <h3>Le Terroir</h3>
                 <p>- Bleu <br>- Bavette <br>- Echalottes <br>- Mesclun </p>
             </div>
-            <img class="main-content-image" src="../images/burgers2.jpg" alt="nos produits">
+            <img class="main-content-image" src="../images/hamburger3.jpg" alt="nos produits">
         </div>
 
         <div class="main-content-section">
-                 <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
+                 <img  class="main-content-image" src="../images/hamburger5.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
                 <h3>Le Full Eiffel Tower</h3>
                 <p>-  Cheddar <br>- Oignons <br>- Double Steak <br>- Double Bacon</p>
@@ -52,10 +53,10 @@
                 <h3>Le Green Triomphe</h3>
                 <p>- Avocat <br>- Graines Germées <br>- Steak d'Aubergine</p>
             </div>
-            <img class="main-content-image" src="../images/savoureux.jpg" alt="nos produits">
+            <img class="main-content-image" src="../images/hamburger1.jpg" alt="nos produits">
         </div>
         <div class="main-content-section">
-            <img  class="main-content-image" src="../images/produits.jpg" alt="nos produits">
+            <img  class="main-content-image" src="../images/hamburger2.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
                 <h3>Le Paname</h3>
                 <p>-  Tomates Fraiches <br>- Comté <br>- Charolais <br>- Batavia</p>
