work on responsive home

--- a/html/nos-burgers.html
+++ b/html/nos-burgers.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/style.css">
@@ -28,7 +30,7 @@
             <img  class="main-content-image" src="../images/hamburger4.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
               <h3>Le French touch</h3>
-                <p>- Foie Gras <br>- Roquette <br>- Oignons frites</p>
+                <p>- Foie Gras <br>- Roquette <br>- Oignons frits</p>
             </div>
         </div>
 
