--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,10 @@
     <title>Panamburger, le burger à la Française</title>
 </head>
 <body>
+    <nav class="header-nav-responsive">
+        <a href="" class="header-nav-responsive-logo"><img src="" alt="Panamburger"></a>
+        ul.
+    </nav>
     <header id="header">
         <nav class="header-nav">
             <ul class="header-nav-buttons-list">
