updated hero image for smartphone

--- a/html/index.html
+++ b/html/index.html
@@ -11,10 +11,6 @@
     <title>Panamburger, le burger à la Française</title>
 </head>
 <body>
-    <nav class="header-nav-responsive">
-        <a href="" class="header-nav-responsive-logo"><img src="" alt="Panamburger"></a>
-        ul.
-    </nav>
     <header id="header">
         <nav class="header-nav">
             <ul class="header-nav-buttons-list">
@@ -67,11 +63,11 @@
                 <a href="http://www.instagram.com"><img src="../images/insta12.jpg"></a>
             </div>
             <!-- INSTAGRAM RESPONSIVE  -->
-            <div class="slider">
-                <div class="main-content-slider-instagram-title">
+            <div class="main-content-instagram-slider-container">
+                <div class="main-content-instagram-slider-title">
                     <h2>Envoyez-nous vos photos avec #panamburger</h2>
                 </div>
-                <figure>
+                <figure class="main-content-instagram-slider">
                     <img src="../images/insta1.jpg" alt="Personne qui mange des burgers">
                     <img src="../images/insta10.jpg">
                     <img src="../images/insta16.jpg">
