--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,23 @@
     <title>Panamburger, le burger à la Française</title>
 </head>
 <body>
+
+    <div class="nav-responsive">
+    <ul id="menu-deroulant">
+        <li><img class="logo" src="../images/logo-menu.png" alt="Panamburger">
+            <ul>
+                <li><a href="index.html">Notre concept</a></li>
+                <li><a href="nos-burgers.html">Nos burgers</a></li>
+                <li><a href="nous-trouver.html">Nous trouver</a></li>
+            </ul>
+    </ul>
+
+    <ul class="nav-logos">
+        <li class="nav-buttons nav-buttons-social"><i class="fa fa-facebook"></i></li>
+        <li class="nav-buttons nav-buttons-social"><i class="fa fa-twitter"></i></li>
+        <li class="nav-buttons nav-buttons-social"><i class="fa fa-instagram"></i></li>
+    </ul>
+    </div>
     <header id="header">
         <nav class="header-nav">
             <ul class="header-nav-buttons-list">
@@ -63,6 +80,7 @@
                 <a href="http://www.instagram.com"><img src="../images/insta12.jpg"></a>
             </div>
             <!-- INSTAGRAM RESPONSIVE  -->
+<!--
             <div class="main-content-instagram-slider-container">
                 <div class="main-content-instagram-slider-title">
                     <h2>Envoyez-nous vos photos avec #panamburger</h2>
@@ -75,6 +93,7 @@
                     <img src="../images/insta13.jpg">
                 </figure>
             </div>
+-->
             <!-- FIN INSTAGRAM RESPONSIVE -->
         </div>
      </main>
