--- a/html/nos-burgers.html
+++ b/html/nos-burgers.html
@@ -9,6 +9,22 @@
         <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <div class="nav-responsive">
+        <ul id="menu-deroulant">
+            <li><a class="nav-buttons-links" href="index.html"><img class="logo" src="../images/logo-menu.png" alt="Panamburger"></a>
+                <ul>
+                    <li><a href="index.html">Notre concept</a></li>
+                    <li><a href="nos-burgers.html">Nos burgers</a></li>
+                    <li><a href="nous-trouver.html">Nous trouver</a></li>
+                </ul>
+        </ul>
+
+        <ul class="nav-logos">
+            <li class="nav-buttons nav-buttons-social"><i class="fa fa-facebook"></i></li>
+            <li class="nav-buttons nav-buttons-social"><i class="fa fa-twitter"></i></li>
+            <li class="nav-buttons nav-buttons-social"><i class="fa fa-instagram"></i></li>
+        </ul>
+    </div>
     <header>
         <nav class="header-nav">
             <ul class="header-nav-buttons-list">
@@ -22,15 +38,15 @@
             </ul>
         </nav>
         <div class="header-hero-image-page2">
-            <h1 class="header-hero-image-title">Nos Burgers</h1>
+            <h1 class="header-hero-image-title header-hero-image-title-page2">Nos Burgers</h1>
         </div>
     </header>
-    <main class="main-content-container">
+    <main class="main-content-container main-content-container-page2">
         <div class="main-content-section">
             <img  class="main-content-image" src="../images/hamburger4.jpg" alt="nos produits">
             <div class="main-content-text main-content-text-right">
               <h3>Le French touch</h3>
-                <p>- Foie Gras <br>- Roquette <br>- Oignons frits</p>
+              <p>- Foie Gras <br>- Roquette <br>- Oignons frits</p>
             </div>
         </div>
 
