--- a/html/nous-trouver.html
+++ b/html/nous-trouver.html
@@ -10,6 +10,22 @@
     <title>Panamburger, le burger à la Française</title>
 </head>
 <body>
+    <div class="nav-responsive">
+        <ul id="menu-deroulant">
+            <li><a class="nav-buttons-links" href="index.html"><img class="logo" src="../images/logo-menu.png" alt="Panamburger"></a>
+                <ul>
+                    <li><a href="index.html">Notre concept</a></li>
+                    <li><a href="nos-burgers.html">Nos burgers</a></li>
+                    <li><a href="nous-trouver.html">Nous trouver</a></li>
+                </ul>
+        </ul>
+
+        <ul class="nav-logos">
+            <li class="nav-buttons nav-buttons-social"><i class="fa fa-facebook"></i></li>
+            <li class="nav-buttons nav-buttons-social"><i class="fa fa-twitter"></i></li>
+            <li class="nav-buttons nav-buttons-social"><i class="fa fa-instagram"></i></li>
+        </ul>
+    </div>
     <header>
         <nav class="header-nav">
             <ul class="header-nav-buttons-list">
@@ -40,6 +56,5 @@
         <a href="#header"><i class="fa fa-chevron-up fa-2x"></i></a>
         <p>©Copyright Team Nine - Challenge Simplon.co</p>
     </footer>
-
 </body>
 </html>
