--- a/html/nous-trouver.html
+++ b/html/nous-trouver.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns:og="http://ogp.me/ns#">
 <head>
+    <meta property="og:title" content="Panamburger, le burger à la française" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="#" />
+    <meta property="og:image" content="../images/tableau.jpg"/>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <title>Panamburger, le burger à la Française</title>
+    <meta name="description" content="Nous trouver sur Paris, au 1 rue de Paris, 75001 Paris, ouverture de 11h30 à 23h30 du mardi au samedi" />
 </head>
 <body>
     <header>
