--- a/html/nos-burgers.html
+++ b/html/nos-burgers.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns:og="http://ogp.me/ns#">
 <head>
-        <link rel="stylesheet" href="../css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/style.css">
-        <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <meta property="og:title" content="Panamburger, le burger à la française" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="#" />
+    <meta property="og:image" content="../images/tableau.jpg"/>
+    <meta charset="UTF-8">
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <title>Panamburger, le burger à la Française</title>
+    <meta name="description" content="Toutes les recettes de nos burgers, laissez-vous tenter par un repas rapide et savoureux !" />
 </head>
 <body>
     <header>
@@ -20,7 +29,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <main class="main-content-products">
 
     <div class="main-content-index">
